# SUSTech_CS205_cpp_projects_2021_fall

./: README.md
proj01_design_a_multiplication calculator/: code.cpp
proj02_matrix_multiplication/: code_one_dim.cpp  code_two_dim.cpp
proj03_matrix_structure_and_multiplication/: connect.h  function.c  main.c  testOpenBLAS.c
proj04_a_class_for_matrices/: main.cpp  matclass.hpp
proj05_CNN/: CMakeLists.txt  CNNmodel.cpp  matclass.cpp  matclass.hpp
